docs(#83): OpenAPI for discounts
